--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aromo-auth",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",  
+  "main": "index.js",
   "scripts": {
     "start": "node --experimental-modules src/index.mjs &",
     "stop": "kill -9 $(cat tmp/pid) && rm -r tmp",
@@ -22,6 +22,7 @@
     "mocha": "^6.0.2"
   },
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "mysql": "^2.16.0"
   }
 }
