--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@babel/cli": "^7.4.3",
     "@babel/core": "^7.4.3",
     "@babel/node": "^7.2.2",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.3",
     "@babel/register": "^7.4.0",
+    "@babel/runtime": "^7.4.5",
     "chai": "^4.2.0",
     "chai-http": "^4.2.1",
     "mocha": "^6.0.2",
     "sinon": "^7.3.2"
   },
   "dependencies": {
+    "argon2": "^0.23.0",
     "express": "^4.16.4",
     "mysql": "^2.16.0"
   }
